--- a/index.html
+++ b/index.html
@@ -2,18 +2,22 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
-    <script src="main.js"></script>
+    <title>Pig Latin Translator</title>
+
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Pig Latin Translator</h1>
     <hr/>
     <div id="display-element"></div>
     <form>
-      <input id="user-input" type="text">
+      <input class="user-input" id="user-input" type="text">
       <!-- How do you get this input sent to the pigLatin() function? -->
-      <button onclick="pigLatin()">Translate</button>
+      <button class="button" id="button" onclick="pigLatin()">Translate</button>
+      <button class="reset" id="reset">Reset</button>
     </form>  
     <hr/>
+    <p class="text-output" id="text-output"></p>
   </body>
+  <script type="module" src="./main.js"></script>
+  <script type="module" src="./index.js"></script>
 </html>
